docs: add workflow standards for Git commits and report deployment
- Document Git commit workflow requirements
- Document deep research report deployment process
- Update MEMORY.md with new '工作规范与流程' section

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -38,3 +38,12 @@
 - 当前PE 10.2x，较五年平均19.7x折价48%
 - 账面现金4238亿元人民币
 - 风险：美国de minimis关税政策8月废除，Temu已启动半托管模式应对
+
+---
+
+## 工作规范确认
+用户明确要求的两点已记录到 MEMORY.md：
+1. **Git 提交规范**：所有代码改动必须按标准 Git 流程提交（add → commit）
+2. **报告发布流程**：每次深度研究报告必须上传生产环境
+
+**已更新 MEMORY.md 的"工作规范与流程"章节**
