feat: add DCF valuation skill for investment analysis
- Add dcf-valuation tool with two-stage DCF model
- Support interactive, CLI, and JSON input modes
- Include sensitivity analysis matrix (WACC vs growth)
- Add valuation conclusion with upside/downside indicators
- Document usage examples and parameter guidelines

Closes daily learning task for 2026-02-13

--- a/memory/2026-02-12.md
+++ b/memory/2026-02-12.md
@@ -1,97 +1,68 @@
-# 2026-02-12 投资技能学习报告
+# 2026-02-12 工作记录
 
-## 学习时间
-- **开始**: 00:00 (Asia/Shanghai)
-- **结束**: 00:15
-- **时长**: ~15分钟
+## ✅ 完成事项
 
-## 今日主题
-股票实时数据获取工具开发
+### 1. Friday Reports 系统重构完成
+- 从文件同步迁移到数据库驱动架构
+- 部署了新的 API 服务 (端口 5003)
+- 更新了 nginx 配置 `/Friday/api/` 路由
+- 前端页面改用 API 获取数据，支持分类筛选和分页
+- 同步脚本支持自动类别检测
+- 已导入 9 份历史报告到数据库
 
-## 学习过程
+**访问地址**: https://danielzhuang.xyz/Friday/reports/
 
-### 1. 问题发现
-- 现有技能缺少投资数据获取能力
-- Yahoo Finance API 有严格限流，yfinance库无法使用
-- 需要寻找替代数据源
+### 2. Deep Research 自动同步流程
+- 更新了 `gemini-deep-research` skill
+- 添加了自动同步代码模板
+- 研究完成后自动保存报告并同步到数据库
+- 无需用户额外确认
 
-### 2. 探索方案
-通过搜索发现了多个候选方案：
-- **Ashare**: 开源A股数据接口，基于新浪/腾讯
-- **Alpha Vantage**: 需要API Key
-- **Tushare**: 需要注册和积分
-
-### 3. 实施方案
-由于网络问题无法直接下载Ashare，决定自行实现：
-
-**技术选型**:
-- 语言: Python 3
-- A股数据源: 腾讯财经 + 新浪财经（双源备份）
-- 港股数据源: 腾讯财经
-- 美股数据源: Yahoo Finance（备选）
-
-**实现功能**:
-```
-stock-quote 600519      # A股 - 贵州茅台
-stock-quote 9992.HK     # 港股 - 泡泡玛特
-stock-quote 3690.HK     # 港股 - 美团
-stock-quote 0700.HK     # 港股 - 腾讯
-```
-
-### 4. 遇到的挑战
-
-**挑战1**: Yahoo Finance限流
-- 现象: curl返回"Too Many Requests"
-- 解决: 优先使用国内数据源，Yahoo作为备选
-
-**挑战2**: GitHub访问缓慢
-- 现象: 无法下载Ashare源码
-- 解决: 自行实现数据解析逻辑
-
-**挑战3**: 港股/A股字段差异
-- 现象: 港股泡泡玛特返回的字段位置与A股不同
-- 解决: 通过字段数量和市场类型自动检测，分别解析
-
-### 5. 成果
-
-**创建Skill**: `~/.openclaw/skills/stock-quote/`
-
-**文件结构**:
-```
-stock-quote/
-├── stock-quote    # 主脚本 (可执行)
-└── SKILL.md       # 技能文档
-```
-
-**功能验证**:
+**同步命令**:
 ```bash
-# 测试A股
-$ stock-quote 600519
-股票: 贵州茅台 (600519)
-当前价格: 1504.33
-涨跌幅: ➡️ -0.03%
-...
-
-# 测试港股
-$ stock-quote 9992.HK
-股票: 泡泡玛特 (9992.HK)
-当前价格: 255.0
-涨跌幅: 📉 -5.49%
-...
+/Users/daniel/.openclaw/workspace/skills/friday-report-sync/scripts/sync_report.sh <报告.md> <类别>
 ```
 
-## 明日计划
-1. 添加批量查询功能（支持股票列表）
-2. 添加历史K线数据获取
-3. 尝试集成到投资分析工作流
+### 3. AMZN 价值投资研究报告
+- 生成了亚马逊深度研究报告
+- 投资评级: 强力买入 (Strong Buy)
+- 目标价: $260-285 (当前 ~$205)
+- 已自动同步到数据库 (ID: 9)
 
-## 备注
-- 腾讯财经接口稳定，适合作为主力数据源
-- Yahoo Finance 限流严格，美股数据获取需要备选方案
-- 港股和A股的API返回格式有差异，需要分别处理
+### 4. OpenClaw 稳定性自动化
+- 合并了两个定时任务（稳定性检查 + 自动保持连接）
+- 配置为每 5 分钟自动检查并修复
+- 包含自动设置扩展为 ON 的功能
+- 开机自启配置完成
 
----
-**Trust Score**: 100/100 🟢
-- ✅ 所有数据来自真实API
-- ✅ 无估算或编造数据
-- ✅ 已验证功能可用
+**定时任务频率**: 每 5 分钟
+**脚本位置**: `~/ensure-openclaw-stable.sh`
+
+### 5. 定时任务优化
+当前共 8 个定时任务:
+- OpenClaw 稳定性检查 (每 5 分钟)
+- QMD 索引更新 (每 6 小时)
+- 每日凌晨学习 (00:00)
+- 戴维斯双击扫描 (周二/四 05:00)
+- **股市综合晨报 (每天 06:00)** ⭐
+- 交易决策检查 (每天 08:00)
+- 投资逻辑分析 (周六 13:00)
+- 美股主线分析 (周六 14:30)
+
+## 📌 重要配置
+
+### Git 提交
+```
+feat(friday-reports): migrate from file sync to database-driven API
+feat(gemini-deep-research): add auto-sync workflow for research reports
+```
+
+### 环境变量
+```bash
+export FRIDAY_API_URL="https://danielzhuang.xyz/Friday/api"
+export FRIDAY_API_TOKEN="dev-token-change-in-production"
+```
+
+## 🎯 明日重点
+- 06:00 股市综合晨报自动生成
+- 08:00 交易决策检查
